Replace get(0) calls with getFirst() in ApplicationPerformanceModelService
The changes in this commit are updating the way we obtain the first handler in ApplicationPerformanceModelService. The original get(0) call is replaced with a safer and more readable getFirst() call. An additional change involves adjusting the calculation logic when 'perf' variable is null. Instead of leaving it null, the new code assigns it the maximum value between 1 and 'sum'.